lexer_parser/src/test/exempleFile/miniJaja/success/oneFunctionInt.mjj
class A {
    int f(){
        
    };

    main{
        
    }
}