lexer_parser/src/test/exempleFile/miniJaja/fail/functionInFunction.mjj
class functionInFunction {
    int x = 0;
    void f(){
        
        void f2(){
            
        }
    }

    main{
        
    }
}